own box slick css added for layout issue

--- a/assets/section-own-box-page.css
+++ b/assets/section-own-box-page.css
@@ -2,7 +2,7 @@
     display: flex;
 }
 .main-wrapper .accordian{
-    display: none;
+    /* display: none; */
 }
 .tab,.add-btn{
     color: #fff;
